--- a/notebooks/02-cmm-initial-plotting.ipynb
+++ b/notebooks/02-cmm-initial-plotting.ipynb
@@ -19515,7 +19515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -23632,7 +23632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -24812,7 +24812,7 @@
          }
         },
         "title": {
-         "text": "Decadal Water Temperature Percentiles in Northern Alaska (1981-2023)"
+         "text": ""
         },
         "xaxis": {
          "showgrid": false,
@@ -24920,7 +24920,7 @@
     "\n",
     "# Update layout\n",
     "fig.update_layout(\n",
-    "    title='Decadal Water Temperature Percentiles in Northern Alaska (1981-2023)',\n",
+    "    title='',\n",
     "    xaxis=dict(title='Month', tickmode='array', tickvals=months, showgrid=False),\n",
     "    yaxis=dict(title='Average Water Temperature (°C)', showgrid=False),\n",
     "    plot_bgcolor='rgba(0,0,0,0)',  # Transparent background\n",
